tests/textual/error/nullList-wrong-argument.uplc
(program 0.0.0 [(force (builtin nullList)) (con integer 1)])